# imresize

./: CMakeLists.txt  README.md  imresize.cpp
